syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 商店服务
service ShopService {
    /** 获取店铺,shopId */
    rpc GetShop (ShopId) returns (SShop) {
    }
    /** 获取商户的店铺,vendorId */
    //rpc GetVendorShop_ (Int64) returns (SShop) {}
    // 检查商户是否开通店铺
    rpc CheckMerchantShopState (MerchantId) returns (CheckShopResponse) {
    }

    /** 获取门店,storeId */
    rpc GetStore (StoreId) returns (SStore) {
    }
    /** 根据主机头获取店铺编号,host */
    rpc QueryShopByHost (String) returns (Int64) {
    }
    // 获取门店
    //rpc GetOfflineShop(1:sint32 shopId)returns(Shop)
    // 打开或关闭商店
    rpc TurnShop (TurnShopRequest) returns (Result) {
    }
    // 保存门店
    rpc SaveShop (SShop) returns (Result) {
    }
    // 保存门店
    rpc SaveOfflineShop (SStore) returns (Result) {
    }
    // 删除商店
    rpc DeleteStore (StoreId) returns (Result) {
    }
}

message TurnShopRequest {
    sint64 shop_id = 1;
    bool on = 2;
    string reason = 3;
}


// 店铺
message SShop {
    /** 店铺编号 */
    int64 id = 1;
    /** 商户编号 */
    int64 merchant_id = 2;
    /** 店铺名称 */
    string ShopName = 3;
    // 店铺标题
    string ShopTitle = 4;
    // 店铺公告
    string ShopNotice = 5;
    // 标志
    int32 Flag = 6;
    /** 店铺标志 */
    string logo = 7;
    /** 个性化域名 */
    string Alias = 8;
    /** 自定义 域名 */
    string Host = 9;
    /** 电话 */
    string Telephone = 10;
    /** 状态 */
    int32 state = 11;
}

// 店铺设置
message SShopConfig {
    /** 店铺标志 */
    string logo = 4;
    /** 自定义 域名 */
    string Host = 5;
    /** 个性化域名 */
    string Alias = 6;
    /** 电话 */
    string Tel = 7;
}

// 店铺编号
message ShopId {
    int64 value =  1;
}
// 门店编号
message StoreId {
    int64 value =  1;
}

// 店铺
message SStore {
    sint64 id = 1;
    sint64 merchant_id = 2;
    string name = 3;
    string Alias = 4;
    sint32 state = 5;
    sint32 OpeningState = 8;
    string StorePhone = 9;
    string StoreNotice = 11;
    int32 province = 12;
    int32 City = 13;
    int32 District = 14;
    // 地区名称
    string Address = 15;
    // 详细地址
    string DetailAddress = 16;
    // 纬度
    double Lat = 17;
    // 经度
    double Lng = 18;
    // 覆盖范围(公里)
    int32 CoverRadius = 19;
    // 序号
    int32 SortNum = 20;
}

// 检查店铺结果
message CheckShopResponse {
    int64 shop_id = 1;
    // 店铺开通状态,0:未开通 1:已开通 2:待审核 3:审核未通过
    int32 Status = 2;
    string remark = 3;
}
